--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,17 @@
 
 .card .card-title {
   font-family: Arial, sans-serif;
-  margin: 0px;
+  margin: 0;
   color: hsl(0, 0%, 20%);
 }
 
 .card .card-text {
   font-family: Arial, sans-serif;
   color: hsl(0, 0%, 30%);
+}
+
+.cardContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
